--- a/product.css
+++ b/product.css
@@ -39,7 +39,18 @@ hr {
 }
 .nav-item:hover {
   border-bottom: 2px solid #05bfdb;
+
   /* margin-bottom: 0; */
+}
+.login {
+  text-decoration: none;
+  color: black;
+}
+.nav-items {
+  font-size: 14px;
+}
+.footer li.nav-items:hover a.nav-link {
+  color: #05bfdb;
 }
 .content {
   font-size: 0.9rem;
@@ -157,12 +168,17 @@ hr {
   color: #05bfdb;
 }
 .sisyphus {
-  width: 100%;
+  /* width: 100%; */
   background-color: #f9fafb;
+  border: none;
+  border-radius: 5px;
+}
+/* .sis-width {
+  width: 70%;
 }
 .sisyphus-text {
-  width: 60%;
-}
+  width: 70%;
+} */
 .width-text,
 width-title {
   width: 70%;
