--- a/product.css
+++ b/product.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 .orange {
   color: #05bfdb;
@@ -51,9 +51,9 @@ hr {
   font-weight: bold;
 }
 .nav-items {
-  font-size: 14px;
+  font-size: 16px;
 }
-.footer li.nav-items:hover a.nav-link {
+.nav-items:hover a.nav-link {
   color: #05bfdb;
 }
 .content {
@@ -238,7 +238,7 @@ h3 {
   width: 70%;
 } */
 .width-text,
-width-title {
+.width-title {
   width: 70%;
 }
 .small {
